--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Ajustes del sitio. Archivo _config.yml
 title: "Título del sitio"
-description: "Una breve descripción de su sitio web."
-baseurl: "" # Si su sitio está en un subdirectorio, como p. ej. "/blog"
+description: "Empresa de limpieza técnica en el Baix Llobregat (BCN)"
+baseurl: "" # Si el sitio web está en un subdirectorio, como p. ej. "/blog"
 url: "https://su_usuario.github.io" # La URL de su sitio sin el subdirectorio
 author: "Su Nombre"
 
