--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: "Título del sitio"
 description: "Empresa de limpieza técnica en el Baix Llobregat (BCN)"
 baseurl: "" # Si el sitio web está en un subdirectorio, como p. ej. "/blog"
-url: "https://su_usuario.github.io" # La URL de su sitio sin el subdirectorio
-author: "Su Nombre"
+url: "https://webABlimpieza.com.github.io" # La URL de su sitio sin el subdirectorio
+author: "Javier Rodríguez"
 
 # Configuración
 markdown: kramdown
@@ -17,7 +17,9 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
-
+  - jekyll-paginate
+  - jekyll-archives
+  - jekyll-admin
 # Optional settings
 timezone: "Europe/Madrid" # Ajuste según su zona horaria
 language: "es"
