--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "AB limpieza"
 description: "Empresa de limpieza técnica en el Baix Llobregat (BCN)"
 baseurl: "" # Si el sitio web está en un subdirectorio, como p. ej. "/blog"
 url: "https://webABlimpieza.com.github.io" # La URL de su sitio sin el subdirectorio
-author: "Javier Rodríguez"
+author: "<a href='https://www.qe2computing.com/'>QE2 computing</a>"
 
 # Configuración
 markdown: kramdown
