--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Ajustes del sitio. Archivo _config.yml
-title: "AB limpieza"
-description: "Empresa de limpieza técnica en el Baix Llobregat (BCN)"
+title: "Servicios de Limpieza Profesional | AB Limpieza"
+description: "Empresa de servicios de limpieza técnica en el Baix Llobregat (BCN)"
 baseurl: "" # Si el sitio web está en un subdirectorio, como p. ej. "/blog"
 url: "https://webABlimpieza.com.github.io" # La URL de su sitio sin el subdirectorio
 author: "<a href='https://www.qe2computing.com/'>QE2 computing</a>"
